# crewai_test_01

./: .env_template  README.md  pyproject.toml
src/scrum_project/: crew.py  main.py
src/scrum_project/config/: agents.yaml  tasks.yaml
src/scrum_project/tools/: github_tool.py  jira_tool.py  slack_tool.py
