[project]
name = "scrum_project"
version = "0.1.0"
description = "scrum_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
scrum_project = "scrum_project.main:run"
run_crew = "scrum_project.main:run"
train = "scrum_project.main:train"
replay = "scrum_project.main:replay"
test = "scrum_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
